--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -27,6 +27,7 @@
   </head>
 
   <body>
+    <div id="logo"></div>
     <!------------------------- HEADER - LOGOTIPO ---------------------->
 
     <header>
@@ -201,6 +202,7 @@
         </div>
       </div>
     </footer>
+    <a href="#logo" class="back-to-top">Voltar ao topo</a>
     <script src="Javascript/jquery.min.js"></script>
     <script src="Javascript/main.js"></script>
   </body>
